k8s-aws/helloworld.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloworld-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld-v1
    spec:
      containers:
      - name: k8s-demo
        image: example.com/helloworld
        ports:
        - name: nodejs-port
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-v1
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30305
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: helloworld-v1
