k8s-aws/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: foo
  annotations:
    kubernetes.io/ingress.class: traefik # use the one that corresponds to your ingress controller.
    external-dns.alpha.kubernetes.io/target: traefik.k8s-pactera-deg.com.
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - backend:
          serviceName: foo
          servicePort: 80
